# Snake

./: CMakeLists.txt  snake.cpp  test.cpp
inc/: CSnake.hpp  IData.hpp  kbhit.hpp
src/: CSnake.cpp  kbhit.cpp
